# D3D12Wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  record.md
common/: CMakeLists.txt
common/include/gfxshim/common/: base.h  d3d12_dispatch_table.h  dll_manager.h  dxgi_dispatch_table.h  object_pool.h  util.h
d3d11/: CMakeLists.txt  d3d11_ms.def  d3d11_wrap.def
d3d11/src/d3d11/entry/: d3d11_dll_main.cpp
d3d12/: CMakeLists.txt  d3d12_wrap.def  hooks.cpp
d3d12/include/d3d12/: core.h
d3d12/include/d3d12/common/: d3d12_wrap_common.h  logger.h  object_pool.h
d3d12/include/d3d12/core/: d3d12_command_allocator_wrap.h  d3d12_command_list1_wrap.h  d3d12_command_list2_wrap.h  d3d12_command_list3_wrap.h  d3d12_command_list4_wrap.h  d3d12_command_list5_wrap.h  d3d12_command_list6_wrap.h  d3d12_command_list7_wrap.h  d3d12_command_list8_wrap.h  d3d12_command_list9_wrap.h  d3d12_command_list_wrap.h  d3d12_command_queue_wrap.h  d3d12_device10_wrap.h  d3d12_device11_wrap.h  d3d12_device12_wrap.h  d3d12_device1_wrap.h  d3d12_device2_wrap.h  d3d12_device3_wrap.h  d3d12_device4_wrap.h  d3d12_device5_wrap.h  d3d12_device6_wrap.h  d3d12_device7_wrap.h  d3d12_device8_wrap.h  d3d12_device9_wrap.h  d3d12_device_wrap.h  d3d12_hook_manager.h  d3d12_tracer.h
d3d12/include/d3d12/tracer/: d3d12_hook_manager.h  d3d12_tracer.h
d3d12/src/d3d12/: d3d12_dll_main.cpp
d3d12/src/d3d12/common/: d3d12_wrap_common.cpp  logger.cpp
d3d12/src/d3d12/core/: d3d12_command_allocator_wrap.cpp  d3d12_command_list10_wrap.cpp  d3d12_command_list1_wrap.cpp  d3d12_command_list2_wrap.cpp  d3d12_command_list3_wrap.cpp  d3d12_command_list4_wrap.cpp  d3d12_command_list5_wrap.cpp  d3d12_command_list6_wrap.cpp  d3d12_command_list7_wrap.cpp  d3d12_command_list8_wrap.cpp  d3d12_command_list9_wrap.cpp  d3d12_command_list_wrap.cpp  d3d12_command_list_wrap_debug.cpp  d3d12_command_queue_wrap.cpp  d3d12_device10_wrap.cpp  d3d12_device11_wrap.cpp  d3d12_device12_wrap.cpp  d3d12_device1_wrap.cpp  d3d12_device2_wrap.cpp  d3d12_device3_wrap.cpp  d3d12_device4_wrap.cpp  d3d12_device5_wrap.cpp  d3d12_device6_wrap.cpp  d3d12_device7_wrap.cpp  d3d12_device8_wrap.cpp  d3d12_device9_wrap.cpp  d3d12_device_wrap.cpp  d3d12_dll_main.cpp  d3d12_hook_manager.cpp  d3d12_hooks.cpp  d3d12_tracer.cpp
d3d12/src/d3d12/entry/: d3d12_dll_main.cpp
d3d12/src/d3d12/tracer/: d3d12_hook_manager.cpp  d3d12_tracer.cpp
d3d12_tracer/: CMakeLists.txt  d3d12_tracer.def
d3d12_tracer/include/tracer/common/: d3d12_wrap_common.h  logger.h
d3d12_tracer/include/tracer/core/: wrapper_creators.h
d3d12_tracer/include/tracer/d3d12/: d3d10_blob_wrap.h  d3d12_command_allocator_wrap.h  d3d12_command_list10_wrap.h  d3d12_command_list1_wrap.h  d3d12_command_list2_wrap.h  d3d12_command_list3_wrap.h  d3d12_command_list4_wrap.h  d3d12_command_list5_wrap.h  d3d12_command_list6_wrap.h  d3d12_command_list7_wrap.h  d3d12_command_list8_wrap.h  d3d12_command_list9_wrap.h  d3d12_command_list_wrap.h  d3d12_command_queue_wrap.h  d3d12_command_signature_wrap.h  d3d12_debug_wrap.h  d3d12_device10_wrap.h  d3d12_device11_wrap.h  d3d12_device12_wrap.h  d3d12_device14_wrap.h  d3d12_device1_wrap.h  d3d12_device2_wrap.h  d3d12_device3_wrap.h  d3d12_device4_wrap.h  d3d12_device5_wrap.h  d3d12_device6_wrap.h  d3d12_device7_wrap.h  d3d12_device8_wrap.h  d3d12_device9_wrap.h  d3d12_device_configuration_wrap.h  d3d12_device_factory_wrap.h  d3d12_device_removed_extended_wrap.h  d3d12_device_wrap.h  d3d12_fence_wrap.h  d3d12_guest_device_wrap.h  d3d12_heap_wrap.h  d3d12_info_queue_wrap.h  d3d12_lifetime_wrap.h  d3d12_meta_command_wrap.h  d3d12_pipeline_library_wrap.h  (+11 more)
d3d12_tracer/include/tracer/dxgi/: dxgi_wrappers.h
d3d12_tracer/include/tracer/hooks/: d3d12_hook_manager.h  d3d12_tracer.h
d3d12_tracer/src/tracer/common/: d3d12_wrap_common.cpp  logger.cpp
d3d12_tracer/src/tracer/core/: wrapper_creators.cpp
d3d12_tracer/src/tracer/d3d12/: d3d10_blob_wrap.cpp  d3d12_command_allocator_wrap.cpp  d3d12_command_list10_wrap.cpp  d3d12_command_list1_wrap.cpp  d3d12_command_list2_wrap.cpp  d3d12_command_list3_wrap.cpp  d3d12_command_list4_wrap.cpp  d3d12_command_list5_wrap.cpp  d3d12_command_list6_wrap.cpp  d3d12_command_list7_wrap.cpp  d3d12_command_list8_wrap.cpp  d3d12_command_list9_wrap.cpp  d3d12_command_list_wrap.cpp  d3d12_command_list_wrap_debug.cpp  d3d12_command_queue_wrap.cpp  d3d12_command_signature_wrap.cpp  d3d12_debug_wrap.cpp  d3d12_device10_wrap.cpp  d3d12_device11_wrap.cpp  d3d12_device12_wrap.cpp  d3d12_device14_wrap.cpp  d3d12_device1_wrap.cpp  d3d12_device2_wrap.cpp  d3d12_device3_wrap.cpp  d3d12_device4_wrap.cpp  d3d12_device5_wrap.cpp  d3d12_device6_wrap.cpp  d3d12_device7_wrap.cpp  d3d12_device8_wrap.cpp  d3d12_device9_wrap.cpp  d3d12_device_configuration_wrap.cpp  d3d12_device_factory_wrap.cpp  d3d12_device_removed_extended_wrap.cpp  d3d12_device_wrap.cpp  d3d12_fence_wrap.cpp  d3d12_guest_device_wrap.cpp  d3d12_heap_wrap.cpp  d3d12_info_queue_wrap.cpp  d3d12_lifetime_wrap.cpp  d3d12_meta_command_wrap.cpp  (+12 more)
d3d12_tracer/src/tracer/dxgi/: dxgi_wrappers.cpp
d3d12_tracer/src/tracer/entry/: d3d12_dll_main.cpp  tracer_dll_main.cpp
d3d12_tracer/src/tracer/hooks/: d3d12_hook_manager.cpp  d3d12_tracer.cpp
dxgi/: CMakeLists.txt  dxgi_wrap.def
dxgi/include/dxgi/: core.h
dxgi/src/dxgi/: dxgi_dll_main.cpp
fake_tracer/: d3d12_tracer.def
src/: alpha_to_coverage.md  d3d12_command_list.h  d3d12_command_list1_wrap.cpp  d3d12_command_list1_wrap.h  d3d12_command_list2_wrap.cpp  d3d12_command_list2_wrap.h  d3d12_command_list3_wrap.cpp  d3d12_command_list3_wrap.h  d3d12_command_list4_wrap.cpp  d3d12_command_list4_wrap.h  d3d12_command_list5_wrap.cpp  d3d12_command_list5_wrap.h  d3d12_command_list6_wrap.cpp  d3d12_command_list6_wrap.h  d3d12_command_list7_wrap.cpp  d3d12_command_list7_wrap.h  d3d12_command_list8_wrap.cpp  d3d12_command_list8_wrap.h  d3d12_command_list9_wrap.cpp  d3d12_command_list9_wrap.h  d3d12_command_list_wrap.cpp  d3d12_command_list_wrap.h  (+39 more)
tracer/: CMakeLists.txt
tracer/include/tracer/: core.h
tracer/src/tracer/: tracer_dll_main.cpp
(+1 files in other folders)
